# ParentingBench

./: .gitignore  .pre-commit-config.yaml  BUILD.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SETUP.md  TROUBLESHOOTING.md  demo.ipynb  demo_comparison.py  demo_usage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml
data/: board_default.json
examples/: README.md
parentingbench/: __init__.py  compare.py  evaluate.py  schemas.py
parentingbench/evaluators/: __init__.py  base.py  llm_judge.py  multi_judge.py
parentingbench/models/: __init__.py  anthropic_adapter.py  base.py  litellm_adapter.py  openai_adapter.py  sglang_adapter.py
parentingbench/scenarios/school_age/: academic_homework_struggles.yaml  academic_learning_differences.yaml  academic_learning_dyslexia_concern.yaml  discipline_defiance.yaml  discipline_screen_time.yaml  emotional_anger_management.yaml  emotional_mental_health_anxiety_school.yaml  safety_risky_play.yaml  safety_stranger_danger.yaml  social_bullying_school.yaml  social_friendship_conflicts.yaml  technology_gaming_addiction.yaml  technology_inappropriate_content.yaml
parentingbench/scenarios/teenage/: safety_risk_vaping_discovery.yaml  social_development_social_media_conflict.yaml
parentingbench/utils/: __init__.py  results_writer.py  scenario_loader.py
scripts/: update_docs.py  validate_scenarios.py
src/: game.py  utils.py
tests/: __init__.py  test_adapters_basic.py  test_comparison.py  test_evaluation.py  test_litellm_integration.py  test_multi_judge.py  test_sglang_integration.py  utils_test.py
